# meeting-calculator

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: attendees.rs  digital.rs  main.rs  meeting.rs
